# fastapi-boilerplate

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.json  render.yaml
app/: config.py  main.py  utils.py
app/auth/: service.py
app/auth/adapters/: jwt_service.py
app/auth/repository/: repository.py
app/auth/router/: __init__.py  dependencies.py  errors.py  router_authorize_user.py  router_change_account_data.py  router_get_my_account.py  router_register_user.py
app/shanyraks/: service.py
app/shanyraks/repository/: repository.py
app/shanyraks/router/: router_change_shanyrak.py  router_create_shanyrak.py  router_delete_shanyrak.py  router_get_shanyrak.py
deploy/dockerfiles/: Dockerfile
scripts/: launch.sh  launch_prod.sh
